compilateurDeca/src/test/deca/syntax/valid/sans_objet/print.deca


// Description:
//
// Teste print et println
// Historique:09/01/2026
{
    int x;
    x=4;
    print(x);
    println(3,x,5);
}