compilateurDeca/src/test/deca/syntax/invalid/sans_objet/read_avec_arg.deca


//Description
//
//Teste readInt appelé avec un argument
// Historique:
//    cree le 08/01/2026
{
    int x;
    x= readInt(3);
}